--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.21",
     "@types/node": "^14.0.5",
+    "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
