--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/btoa": "^1.2.3",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
@@ -31,6 +32,7 @@
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.4",
     "body-parser": "^1.19.0",
+    "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "discord.js": "^12.2.0",
@@ -40,7 +42,7 @@
     "typescript": "^3.9.3"
   },
   "devDependencies": {
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.5",
     "@types/node-fetch": "^2.5.7"
   }
 }
