--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^14.0.5",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.4",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cookie-parser": "^1.4.5",
