--- a/package.json
+++ b/package.json
@@ -24,22 +24,27 @@
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/btoa": "^1.2.3",
+    "@types/color": "^3.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.21",
     "@types/node": "^14.0.5",
     "@types/node-fetch": "^2.5.7",
+    "@types/tinycolor2": "^1.4.2",
     "@types/ws": "^7.2.4",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
+    "canvas": "^2.6.1",
+    "color": "^3.1.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.15",
     "node": "^14.2.0",
+    "tinycolor2": "^1.4.1",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
